2008-11-25  Mikael Morin  <mikael.morin@tele2.fr>

PR fortran/36463
	* expr.c (replace_symbol): Don't replace the symtree
	if the expresion is an intrinsic function. Don't create
	non-existent symtrees.  Use symbol's name instead of symtree's,
	different in case of module procedure dummy arguments.

2008-11-25  Mikael Morin  <mikael.morin@tele2.fr>

	PR fortran/36463
	* gfortran.dg/proc_decl_20.f90: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@142191 138bc75d-0d04-0410-961f-82ee72b054a4